--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tt": "gulp after:ngc",
     "build-dev": "ng build -prod --aot --env=dev && gulp before:ngc && ngc && gulp after:ngc && webpack --define process.env.ENV_CONFIG='\"dev\"' --progress",
     "build-staging": "ng build -prod --aot --env=staging && gulp before:ngc && ngc && gulp after:ngc && webpack --define process.env.ENV_CONFIG='\"staging\"' --progress",
-    "build": "ng build -prod --aot --env=prod && gulp before:ngc && ngc --env=prod && gulp after:ngc && webpack --define process.env.ENV_CONFIG='\"prod\"' --progress",
+    "build": "ng build -prod --aot --env=prod && gulp before:ngc && ngc && gulp after:ngc && webpack --define process.env.ENV_CONFIG='\"prod\"' --progress",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build -prod --aot --env=${ENV_CONFIG} && gulp before:ngc && ngc && gulp after:ngc && webpack --define process.env.ENV_CONFIG='\"${ENV_CONFIG}\"' --progress",
     "heroku-prebuild": "yarn global add @angular/cli",
