--- a/package.json
+++ b/package.json
@@ -19,73 +19,73 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~4.1.2",
-    "@angular/common": "~4.1.2",
-    "@angular/compiler-cli": "~4.1.2",
-    "@angular/core": "~4.1.2",
-    "@angular/forms": "~4.1.2",
-    "@angular/http": "~4.1.2",
-    "@angular/platform-browser": "~4.1.2",
-    "@angular/platform-server": "~4.1.2",
-    "@angular/router": "~4.1.2",
-    "compression": "~1.6.2",
-    "cookie-parser": "~1.4.3",
-    "core-js": "~2.4.1",
-    "express": "~4.15.2",
-    "moment": "~2.18.1",
-    "raven-js": "~3.15.0",
+    "@angular/animations": "4.1.2",
+    "@angular/common": "4.1.2",
+    "@angular/compiler-cli": "4.1.2",
+    "@angular/core": "4.1.2",
+    "@angular/forms": "4.1.2",
+    "@angular/http": "4.1.2",
+    "@angular/platform-browser": "4.1.2",
+    "@angular/platform-server": "4.1.2",
+    "@angular/router": "4.1.2",
+    "compression": "1.6.2",
+    "cookie-parser": "1.4.3",
+    "core-js": "2.4.1",
+    "express": "4.15.2",
+    "moment": "2.18.1",
+    "raven-js": "3.15.0",
     "zone.js": "0.8.7"
   },
   "devDependencies": {
-    "@agm/core": "~1.0.0-beta.0",
-    "@angular/cli": "~1.0.3",
-    "@angular/compiler": "~4.0.2",
-    "@angular/platform-browser-dynamic": "~4.1.2",
-    "@biesbjerg/ngx-translate-extract": "~2.3.1",
-    "@ngx-cache/core": "~0.4.0-beta.1",
-    "@ngx-translate/core": "~6.0.1",
+    "@agm/core": "1.0.0-beta.0",
+    "@angular/cli": "1.0.3",
+    "@angular/compiler": "4.1.2",
+    "@angular/platform-browser-dynamic": "4.1.2",
+    "@biesbjerg/ngx-translate-extract": "2.3.1",
+    "@ngx-cache/core": "0.4.0-beta.2",
+    "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
-    "@ngx-universal/translate-loader": "~0.4.0-beta.1",
-    "@types/express": "~4.0.35",
-    "@types/jasmine": "~2.5.47",
-    "@types/lodash": "~4.14.64",
-    "@types/moment": "~2.13.0",
-    "@types/node": "~7.0.18",
-    "classlist.js": "~1.1.20150312",
-    "codelyzer": "~2.1.1",
+    "@ngx-universal/translate-loader": "0.4.0-beta.1",
+    "@types/express": "4.0.35",
+    "@types/jasmine": "2.5.47",
+    "@types/lodash": "4.14.64",
+    "@types/moment": "2.13.0",
+    "@types/node": "7.0.18",
+    "classlist.js": "1.1.20150312",
+    "codelyzer": "2.1.1",
     "extract-text-webpack-plugin": "2.1.0",
-    "font-awesome": "~4.7.0",
-    "gulp-clean": "~0.3.2",
-    "gulp-rename": "~1.2.2",
-    "gulp-sass": "~3.1.0",
-    "gulp-sequence": "~0.4.6",
-    "gulp": "~3.9.1",
-    "hammerjs": "~2.0.8",
-    "intl": "~1.2.5",
-    "jasmine-core": "~2.6.1",
-    "jasmine-spec-reporter": "~4.1.0",
-    "jquery": "~3.2.1",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~1.2.0",
-    "karma-jasmine-html-reporter": "~0.2.2",
-    "karma-jasmine": "~1.1.0",
-    "karma": "~1.7.0",
-    "lodash": "~4.17.4",
-    "node-sass": "~4.5.2",
-    "postcss-loader": "~1.3.3",
-    "protractor": "~5.1.1",
-    "rxjs": "~5.4.0",
-    "semantic-ui-css": "~2.2.10",
-    "ts-helpers": "~1.1.2",
-    "ts-loader": "~2.0.3",
-    "ts-node": "~3.0.4",
-    "tslint-misc-rules": "~3.0.0",
-    "tslint": "~4.5.1",
-    "typescript": "~2.3.2",
-    "web-animations-js": "~2.2.5",
+    "font-awesome": "4.7.0",
+    "gulp-clean": "0.3.2",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
+    "gulp-sequence": "0.4.6",
+    "gulp": "3.9.1",
+    "hammerjs": "2.0.8",
+    "intl": "1.2.5",
+    "jasmine-core": "2.6.1",
+    "jasmine-spec-reporter": "4.1.0",
+    "jquery": "3.2.1",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.2.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-jasmine": "1.1.0",
+    "karma": "1.7.0",
+    "lodash": "4.17.4",
+    "node-sass": "4.5.2",
+    "postcss-loader": "1.3.3",
+    "protractor": "5.1.1",
+    "rxjs": "5.4.0",
+    "semantic-ui-css": "2.2.10",
+    "ts-helpers": "1.1.2",
+    "ts-loader": "2.0.3",
+    "ts-node": "3.0.4",
+    "tslint-misc-rules": "3.0.0",
+    "tslint": "4.5.1",
+    "typescript": "2.3.2",
+    "web-animations-js": "2.2.5",
     "webdriver-manager": "12.0.4",
-    "webpack-node-externals": "~1.6.0",
-    "webpack": "~2.5.1"
+    "webpack-node-externals": "1.6.0",
+    "webpack": "2.5.1"
   }
 }
