--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@angular/compiler": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@biesbjerg/ngx-translate-extract": "2.3.2",
-    "@ngx-cache/core": "0.4.0-beta.2",
-    "@ngx-translate/core": "7.0.0",
+    "@ngx-cache/core": "4.0.1",
+    "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "0.1.0",
     "@ngx-universal/translate-loader": "0.4.0-beta.1",
     "@types/express": "4.0.37",
@@ -77,7 +77,7 @@
     "postcss-loader": "2.0.6",
     "protractor": "5.1.2",
     "rxjs": "5.4.3",
-    "semantic-ui-css": "2.2.10",
+    "semantic-ui-css": "2.2.12",
     "ts-helpers": "1.1.2",
     "ts-loader": "2.3.7",
     "ts-node": "3.3.0",
