--- a/package.json
+++ b/package.json
@@ -22,74 +22,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.1",
-    "@angular/common": "5.0.1",
-    "@angular/compiler-cli": "5.0.1",
-    "@angular/core": "5.0.1",
-    "@angular/forms": "5.0.1",
-    "@angular/http": "5.0.1",
-    "@angular/platform-browser": "5.0.1",
-    "@angular/platform-server": "5.0.1",
-    "@angular/router": "5.0.1",
+    "@agm/core": "^1.0.0-beta.2",
+    "@angular/animations": "^5.0.0",
+    "@angular/cli": "1.5.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@ngx-translate/core": "^8.0.0",
+    "@ngx-translate/http-loader": "^2.0.0",
+    "@types/node": "~8.0.50",
+    "@types/express": "~4.0.39",
+    "@types/googlemaps": "~3.29.2",
+    "classlist.js": "^1.1.20150312",
     "compression": "1.7.1",
     "cookie-parser": "1.4.3",
-    "core-js": "2.5.1",
-    "express": "4.16.2",
-    "moment": "2.19.1",
-    "raven-js": "3.19.1",
-    "zone.js": "0.8.18"
+    "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.19.1",
+    "raven-js": "^3.19.1",
+    "rxjs": "^5.5.0",
+    "semantic-ui-css": "2.2.12",
+    "ts-loader": "^3.1.1",
+    "typescript": ">=2.4.2 <2.5.0",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@agm/core": "1.0.0-beta.2",
-    "@angular/cli": "1.5.0",
-    "@angular/compiler": "5.0.1",
-    "@angular/platform-browser-dynamic": "5.0.1",
-    "@ngx-cache/core": "4.0.1",
-    "@ngx-translate/core": "8.0.0",
-    "@ngx-translate/http-loader": "2.0.0",
-    "@ngx-universal/translate-loader": "4.0.1",
-    "@types/express": "4.0.39",
-    "@types/googlemaps": "3.29.2",
-    "@types/jasmine": "2.6.3",
-    "@types/lodash": "4.14.84",
-    "@types/moment": "2.13.0",
-    "@types/node": "8.0.50",
-    "classlist.js": "1.1.20150312",
-    "codelyzer": "4.0.1",
-    "font-awesome": "4.7.0",
-    "gulp": "3.9.1",
-    "gulp-clean": "0.3.2",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "3.1.0",
-    "gulp-sequence": "0.4.6",
-    "hammerjs": "2.0.8",
-    "intl": "1.2.5",
-    "jasmine-core": "2.8.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "jquery": "3.2.1",
-    "karma": "1.7.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.0",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "lodash": "4.17.4",
-    "node-sass": "4.6.0",
-    "postcss-loader": "2.0.8",
-    "protractor": "5.2.0",
-    "rxjs": "5.5.2",
-    "semantic-ui-css": "2.2.12",
-    "ts-helpers": "1.1.2",
-    "ts-loader": "3.1.1",
-    "ts-node": "3.3.0",
-    "tslint": "5.8.0",
-    "tslint-misc-rules": "3.2.1",
-    "typescript": "2.4.2",
-    "web-animations-js": "2.3.1",
-    "webdriver-manager": "12.0.6",
-    "webpack": "3.8.1",
-    "webpack-node-externals": "1.6.0"
+    "@types/jasmine": "~2.6.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/lodash": "~4.14.84",
+    "codelyzer": "~4.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~1.1.0",
+    "karma": "~1.7.0",
+    "protractor": "~5.2.0",
+    "tslint": "~5.8.0"
   }
 }
