--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "engines": {
     "node": "8.9.0",
-    "npm": "3.10.8"
+    "yarn": "1.3.2"
   },
   "scripts": {
     "build-dev": "yarn run build:dev-client-and-server-bundles && yarn run webpack:server",
@@ -43,8 +43,8 @@
     "@types/express": "~4.0.39",
     "@types/googlemaps": "~3.29.2",
     "classlist.js": "^1.1.20150312",
-    "compression": "1.7.1",
-    "cookie-parser": "1.4.3",
+    "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
@@ -54,7 +54,7 @@
     "moment": "^2.19.1",
     "raven-js": "^3.19.1",
     "rxjs": "^5.5.0",
-    "semantic-ui-css": "2.2.12",
+    "semantic-ui-css": "^2.2.12",
     "ts-loader": "^3.1.1",
     "typescript": ">=2.4.2 <2.5.0",
     "web-animations-js": "^2.3.1",
