--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
     "@angular/animations": "^5.0.0",
     "@angular/cli": "1.5.0",
     "@angular/common": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "@types/node": "~8.0.50",
     "@types/express": "~4.0.39",
     "@types/googlemaps": "~3.29.2",
+    "@types/node": "~8.0.50",
+    "angulartics2": "^4.0.4",
     "classlist.js": "^1.1.20150312",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
@@ -67,12 +68,12 @@
     "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jasmine": "~1.1.0",
-    "karma": "~1.7.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.0",
     "tslint": "~5.8.0"
   }
