--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.0.0",
-    "@angular/cli": "1.5.0",
+    "@angular/cli": "^1.6.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
